# NerdPrompt

./: .cursor-rules  .gitignore  .npconfig.toml  README.md  anthropic-claude-3-haiku.md  pyproject.toml  set_api_key.py
.cursor/rules/: clipboard-functionality.mdc  development-workflow.mdc  llm-api-guide.mdc  project-structure.mdc  recent-updates.mdc  testing-cli-core-integration.mdc  testing-guide.mdc  usage-workflow.mdc
NerdPrompt/np/: cli.py
ai/: REQUIREMENTS.md
np/: __init__.py  __main__.py  cli.py  config.py  core.py  git_handler.py  interactive.py  llm_api.py  output_builder.py  utils.py
np_output/01-test-t1/: _task.md
tests/: __init__.py  conftest.py  test_api_key.py  test_api_key_backup.py  test_cli.py  test_config.py  test_core.py  test_git_handler.py  test_interactive.py  test_llm_api.py  test_np_cli_integration.py  test_output_builder.py  test_utils.py
tests/testproject/: README.md  requirements.txt
tests/testproject/docs/: setup.md
tests/testproject/src/: __init__.py  main.py  utils.py
